--- a/src/index.html
+++ b/src/index.html
@@ -5,22 +5,22 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <title>webPad - you custom experience</title>
+   <title>Fecko Bartłomiej - your programmer</title>
 </head>
 
 <body>
    <nav class="navigation">
       <div class="container">
-         <h4 class="presentation__socials">
-            <img src="/images/github.png" alt="Github projects link">
-            <img src="/images/linked.png" alt="Linkedin link">
+         <h4 class="navigation__socials">
+            <a href="#"><img src="/images/github.png" alt="Github projects link"></a>
+            <a href="#"> <img src="/images/linked.png" alt="Linkedin link"></a>
          </h4>
 
          <ul class="navigation__links">
-            <li>Home</li>
-            <li>Projects</li>
-            <li>Experience</li>
-            <li>Contact</li>
+            <li><a href="#/Home">Home</a></li>
+            <li><a href="#/Projects">Projects</a></li>
+            <li><a href="#/Experience">Experience</a></li>
+            <li><a href="#/Contact">Contact</a></li>
          </ul>
 
          <p class="navigation__author">Fecko Bartlomiej</p>
@@ -29,6 +29,8 @@
 
    <div class="container">
       <main class="presentation">
+         <p class="presentation__author">Fecko Bartlomiej</p>
+
          <h1 class="presentation__header">I design and create websites</h1>
 
          <p class="presentation__desc">Websites, systems, funcinality, and much more</p>
@@ -49,15 +51,21 @@
 
    <div class="projects">
       <div class="container">
-         <div class="projects__desc">
+         <!-- <div class="projects__desc">
             <div>Some of my Projects</div>
             <div>fullstack app, landidng pages, games, differenet types of application.</div>
 
-         </div>
+         </div> -->
+         <!-- <div class="gallery__box__overlay"></div> -->
 
-         <div class="gallery">
-            <div class="gallery__box">
-               <div class="gallery__box__overlay"></div>
+         <div class="carlousel">
+            <div class="carlousel__box">
+            </div>
+            <div class="carlousel__box">
+            </div>
+            <div class="carlousel__box">
+            </div>
+            <div class="carlousel__box">
             </div>
          </div>
       </div>
