--- a/src/index.html
+++ b/src/index.html
@@ -49,17 +49,22 @@
       </main>
    </div>
 
-   <div class="projects">
+   <section class="projects">
       <div class="container">
-         <!-- <div class="projects__desc">
-            <div>Some of my Projects</div>
-            <div>fullstack app, landidng pages, games, differenet types of application.</div>
+         <div class="projects__desc">
+            <h1 class="projects__header section-header">Some of my Projects</h1>
+            <p class="projects__body">fullstack app, landidng pages, games, differenet types of application.</p>
 
-         </div> -->
+         </div>
          <!-- <div class="gallery__box__overlay"></div> -->
 
          <div class="carlousel">
             <div class="carlousel__box">
+               <img src="" alt="">
+               <div class="carlousel__box__overlay">
+                  <h3>2d platformer</h3>
+                  <p>It is a long established fact that a reader will be distracted by the readable...</p>
+               </div>
             </div>
             <div class="carlousel__box">
             </div>
@@ -69,7 +74,7 @@
             </div>
          </div>
       </div>
-   </div>
+   </section>
 
    <script src="index.js"></script>
 </body>
