--- a/src/index.html
+++ b/src/index.html
@@ -60,17 +60,32 @@
 
          <div class="carlousel">
             <div class="carlousel__box">
-               <img src="" alt="">
+               <img src="/images/itboard.png" draggable="false" alt="">
+               <div class="carlousel__box__overlay">
+                  <h3><a href="/#">2d platformer</a> </h3>
+                  <p>It is a long established fact that a reader will be distracted by the readable...</p>
+               </div>
+            </div>
+            <div class="carlousel__box">
+               <img src="/images/fullstack.png" draggable="false" alt="">
                <div class="carlousel__box__overlay">
                   <h3>2d platformer</h3>
                   <p>It is a long established fact that a reader will be distracted by the readable...</p>
                </div>
             </div>
             <div class="carlousel__box">
+               <img src="/images/battleship.png" draggable="false" alt="">
+               <div class="carlousel__box__overlay">
+                  <h3>2d platformer</h3>
+                  <p>It is a long established fact that a reader will be distracted by the readable...</p>
+               </div>
             </div>
             <div class="carlousel__box">
-            </div>
-            <div class="carlousel__box">
+               <img src="/images/platformer.png" draggable="false" alt="">
+               <div class="carlousel__box__overlay">
+                  <h3>2d platformer</h3>
+                  <p>It is a long established fact that a reader will be distracted by the readable...</p>
+               </div>
             </div>
          </div>
       </div>
